src/main/java/com/example/fas/repositories/services/serviceImpl/exceptions/user/error/HadUserDeteleException.java
package com.example.fas.repositories.services.serviceImpl.exceptions.user.error;

public class HadUserDeteleException extends RuntimeException {
    public HadUserDeteleException(String message) {
        super(message);
    }
    
}
